"""
SQLAlchemy ORM Models
Translation Quality Analytics & Continuous Improvement Platform

Defines PostgreSQL relational entities for translations, options, feedback, and analytics marts.
"""

from datetime import date, datetime, timezone
from typing import List, Optional
from uuid import UUID, uuid4

from sqlalchemy import (
    BigInteger,
    Boolean,
    Date,
    DateTime,
    Float,
    ForeignKey,
    Index,
    Integer,
    String,
    Text,
    UniqueConstraint,
)
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column, relationship


class Base(DeclarativeBase):
    """Base class for all SQLAlchemy ORM models."""
    pass


class Translation(Base):
    """Stores incoming translation requests and measured execution telemetry."""
    __tablename__ = "translations"

    id: Mapped[UUID] = mapped_column(primary_key=True, default=uuid4)
    provider: Mapped[str] = mapped_column(String(30), nullable=False, default="huggingface")
    source_text: Mapped[str] = mapped_column(Text, nullable=False)
    source_language: Mapped[str] = mapped_column(String(10), nullable=False)
    target_language: Mapped[str] = mapped_column(String(10), nullable=False)
    translation_time_ms: Mapped[int] = mapped_column(Integer, nullable=False)
    status: Mapped[str] = mapped_column(String(20), nullable=False, default="COMPLETED")
    client_ip: Mapped[Optional[str]] = mapped_column(String(45), nullable=True)
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True),
        nullable=False,
        default=lambda: datetime.now(timezone.utc)
    )

    # Relationships
    options: Mapped[List["TranslationOption"]] = relationship(
        "TranslationOption",
        back_populates="translation",
        cascade="all, delete-orphan"
    )

    __table_args__ = (
        Index("idx_translations_created_at", "created_at"),
        Index("idx_translations_pair", "source_language", "target_language"),
        Index("idx_translations_provider", "provider"),
    )


class TranslationOption(Base):
    """Stores generated candidate translation styles associated with a parent request."""
    __tablename__ = "translation_options"

    id: Mapped[UUID] = mapped_column(primary_key=True, default=uuid4)
    translation_id: Mapped[UUID] = mapped_column(
        ForeignKey("translations.id", ondelete="CASCADE"),
        nullable=False
    )
    style_option: Mapped[str] = mapped_column(String(30), nullable=False)  # LITERAL, NATURAL, FORMAL
    translated_text: Mapped[str] = mapped_column(Text, nullable=False)
    confidence_score: Mapped[Optional[float]] = mapped_column(Float, nullable=True)
    user_selected: Mapped[bool] = mapped_column(Boolean, nullable=False, default=False)
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True),
        nullable=False,
        default=lambda: datetime.now(timezone.utc)
    )

    # Relationships
    translation: Mapped["Translation"] = relationship(
        "Translation",
        back_populates="options"
    )
    feedback: Mapped[Optional["Feedback"]] = relationship(
        "Feedback",
        back_populates="option",
        cascade="all, delete-orphan",
        uselist=False
    )

    __table_args__ = (
        Index("idx_options_translation_id", "translation_id"),
        Index("idx_options_style", "style_option"),
    )


class Feedback(Base):
    """Stores qualitative user evaluation for a specific candidate option."""
    __tablename__ = "feedback"

    id: Mapped[UUID] = mapped_column(primary_key=True, default=uuid4)
    option_id: Mapped[UUID] = mapped_column(
        ForeignKey("translation_options.id", ondelete="CASCADE"),
        nullable=False
    )
    rating: Mapped[str] = mapped_column(String(10), nullable=False)  # GOOD, POOR
    reason: Mapped[Optional[str]] = mapped_column(String(30), nullable=True)
    comments: Mapped[Optional[str]] = mapped_column(Text, nullable=True)
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True),
        nullable=False,
        default=lambda: datetime.now(timezone.utc)
    )

    # Relationships
    option: Mapped["TranslationOption"] = relationship(
        "TranslationOption",
        back_populates="feedback"
    )

    __table_args__ = (
        Index("idx_feedback_option_id", "option_id"),
        Index("idx_feedback_created_at", "created_at"),
    )


class AnalyticsDailyMetric(Base):
    """Pre-aggregated daily reporting data mart generated by PySpark for Grafana."""
    __tablename__ = "analytics_daily_metrics"

    id: Mapped[int] = mapped_column(BigInteger, primary_key=True, autoincrement=True)
    metric_date: Mapped[date] = mapped_column(Date, nullable=False)
    provider: Mapped[str] = mapped_column(String(30), nullable=False)
    source_language: Mapped[str] = mapped_column(String(10), nullable=False)
    target_language: Mapped[str] = mapped_column(String(10), nullable=False)
    style_option: Mapped[str] = mapped_column(String(30), nullable=False)
    total_requests: Mapped[int] = mapped_column(BigInteger, nullable=False)
    avg_latency_ms: Mapped[float] = mapped_column(Float, nullable=False)
    p95_latency_ms: Mapped[float] = mapped_column(Float, nullable=False)
    avg_quality_score: Mapped[float] = mapped_column(Float, nullable=False)
    good_feedback_count: Mapped[int] = mapped_column(BigInteger, nullable=False)
    poor_feedback_count: Mapped[int] = mapped_column(BigInteger, nullable=False)
    poor_feedback_rate: Mapped[float] = mapped_column(Float, nullable=False)
    computed_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True),
        nullable=False,
        default=lambda: datetime.now(timezone.utc)
    )

    __table_args__ = (
        UniqueConstraint(
            "metric_date", "provider", "source_language", "target_language", "style_option",
            name="uq_daily_metrics_slice"
        ),
        Index("idx_daily_metrics_lookup", "metric_date", "source_language", "target_language"),
        Index("idx_daily_metrics_provider", "provider"),
    )


class AnalyticsAnomaly(Base):
    """Stores flagged low-quality or outlier translations for engineering audit."""
    __tablename__ = "analytics_anomalies"

    id: Mapped[int] = mapped_column(BigInteger, primary_key=True, autoincrement=True)
    translation_id: Mapped[Optional[UUID]] = mapped_column(
        ForeignKey("translations.id", ondelete="SET NULL"),
        nullable=True
    )
    option_id: Mapped[Optional[UUID]] = mapped_column(
        ForeignKey("translation_options.id", ondelete="SET NULL"),
        nullable=True
    )
    anomaly_type: Mapped[str] = mapped_column(String(50), nullable=False)
    anomaly_score: Mapped[float] = mapped_column(Float, nullable=False)
    diagnostic_details: Mapped[Optional[str]] = mapped_column(Text, nullable=True)
    detected_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True),
        nullable=False,
        default=lambda: datetime.now(timezone.utc)
    )

    __table_args__ = (
        Index("idx_anomalies_detected_at", "detected_at"),
        Index("idx_anomalies_type", "anomaly_type"),
    )
